--- a/_posts/2021-04-17-벡터의 내적과 외적의 의미.md
+++ b/_posts/2021-04-17-벡터의 내적과 외적의 의미.md
@@ -6,11 +6,11 @@ categories: math
 use_math: true
 ---
 
-### 벡터의 내적과 외적의 물리적 의미
+### 벡터의 내적과 외적의 의미
 
 #### 벡터의 내적
 
-벡터의 내적은 '효율'과 관련있다. 
+벡터의 내적은 투영과 관련있다. 
 
 
 $$
@@ -45,9 +45,11 @@ $$
 벡터의 외적은 다음과 같이 표현한다.
 
 
+
 $$
 \vec{A}\times\vec{B}=\vec{C}
 $$
+
 
 
 ![image](https://user-images.githubusercontent.com/67038853/115111444-60ffa700-9fbb-11eb-84be-2c9d4923d3e5.png)
@@ -63,11 +65,12 @@ $$
 벡터 a,b의 외적은
 
 
+
 $$
 \begin{vmatrix}
-i & j &k \\ 
-a_{1} &a_{2}  &a_{3} \\ 
-b_{1} & b_{2} &b_{3} 
+i & a_{1} &b_{1} \\ 
+j &a_{2}  &b_{2} \\ 
+k & a_{3} &b_{3} 
 \end{vmatrix}=\begin{vmatrix}
 a_{2}&a_{3} \\
 b_{2}&b_{3}
@@ -87,7 +90,9 @@ j\\
 k
 \end{bmatrix}
 $$
-다음과 같이 determinant로 구할 수 있는데, 이는 어떤 벡터 p와 x,y,z축을 가리키는 벡터와의 내적으로 나타낼 수 있다. 
+
+
+다음과 같이 determinant로 구할 수 있는데, 이는 어떤 벡터 p와 x,y,z축을 가리키는 벡터와의 내적으로 나타낼 수 있다. 여기서 i,j,k는 x,y,z축을 각각 나타내는 기저벡터인데, 행렬 안에 벡터를 넣은 것은 표기적 트릭이라고 한다.
 
 여기서 이 determiant라는 개념에 대해서 알아보자.
 
@@ -99,12 +104,14 @@ $$
 
 ![image](https://user-images.githubusercontent.com/67038853/115117387-41777700-9fd9-11eb-89bb-402c3ac4fc90.png)
 
-이렇게 어떤 행렬의 determinant는 평행사변형의 넓이를 나타낸다는것을 증명했다. 이것은 (a,c) , (b,d) 두 벡터의 외적이고, x,y 평면에서 계산한 것이므로 다음과 같이 나타낼 수 있다.
+이렇게 어떤 행렬의 determinant는 두 벡터 (a,c)와 (b,d)가 이루는 평행사변형의 넓이를 나타낸다는것을 증명했다. 이것을 3차원으로 확장한 외적으로 나타내면 다음과 같이 나타낼 수 있다.
+
+
 $$
 \vec{A}\times\vec{B}=\begin{vmatrix}
-i & j &k \\ 
-a &b  &0 \\ 
-c &d &0 
+i & a &b \\ 
+j &c  &d \\ 
+k &0 &0 
 \end{vmatrix}=det\begin{pmatrix}
 a &b \\ 
 c &d 
@@ -112,22 +119,25 @@ c &d
 $$
 
 
-그럼 세 벡터의 외적의 크기는 어떻게 될까?
+
+그러니까, 크기는 A,B 벡터가 이루는 평행사변형의 넓이이고 방향은 $\vec{k}$인 벡터가 나온다. 
+
+여기서 세 벡터의 determinant의 크기는 어떻게 될까?
 
 ![image](https://user-images.githubusercontent.com/67038853/115118511-789c5700-9fde-11eb-958b-da048753a50d.png)
 
 바로 평행 육면체의 부피가 된다. 실제로 외적이 이렇진 않지만, 이 아이디어로부터 외적이 무엇을 의미하는지 알게된다.
 
+우리가 구하고자 하는 것은 3차원 벡터의 외적이다.
 
 
 
 
- 
 $$
 \begin{vmatrix}
-i & j &k \\ 
-a_{1} &a_{2}  &a_{3} \\ 
-b_{1} & b_{2} &b_{3} 
+i & a_{1} &b_{1} \\ 
+j &a_{2}  &b_{2} \\ 
+k & a_{3} &b_{3} 
 \end{vmatrix}=\begin{vmatrix}
 a_{2}&a_{3} \\
 b_{2}&b_{3}
@@ -149,9 +159,16 @@ k
 $$
 
 
-이렇게 어떤 벡터 p를 찾을 수 있게 되는데, 
 
+이것이 의미하는 것을 말로 풀어 써보면, 벡터 p와 벡터 [i,j,k]의 내적을 취한 값이 벡터 A,B,[i,j,k]가 이루는 평행 육면체의 부피와 같아지는 p는 무엇인가? 이다.
 
+![image](https://user-images.githubusercontent.com/67038853/115120789-44c72e80-9fea-11eb-82b5-ae7c5ea2b6e5.png)
+
+평행육면체의 부피를 구해보자. A,B 벡터가 이루는 평행사변형의 넓이에 벡터 [i,j,k]의 길이만큼을 곱하는 것이 아니라, 평행 사변형에 수직인 길이만큼을 곱하면 평행육면체의 부피가 된다. 그러니까 평행육면체의 부피를 구하려면 벡터 [i,j,k]를 A,B 두 벡터에 모두 수직인 벡터에 투영시켜 그 길이와 A,B가 이루는 평행사변형의 넓이를 곱하여 구해야 한다.
+
+그러니까 **벡터 p가 A,B 벡터에 모두 수직이고 그 크기가 A,B가 이루는 평행사변형의 넓이라면, A,B, 벡터 [i,j,k]가 이루는 평행 육면체의 부피는 벡터 p와 벡터 [i,j,k]의 내적과 같다.**
+
+ 2차원에서 determinant는 넓이 factor를 의미했다면, 3차원으로 확장하게 되면 determinant가 부피를 의미하게 되어서, 두 벡터의 외적의 크기는 A,B 벡터가 이루는 평행사변형의 넓이와 같고 방향은 두 벡터에 모두 수직인(오른손법칙을 이용해서 +,- 구분) 벡터를 의미하는데, 외적을 계산하는 과정은 결국 부피를 구하는 과정과 같게 된다.
 
 
 
